# mlrf

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: example.ipynb
src/: __init__.py
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: train_model.py
src/visualization/: visualize.py
